# hcc2-hip

./: CMakeLists.txt  INSTALL.md  README.md
cmake/Modules/: LibhiprtGetDependencies.cmake
examples/hip/matrixmul/: Makefile
examples/hip/vectorAdd/: Makefile
examples/hip/writeIndex/: Makefile  writeIndex.c
include/hip/: hip_runtime.h  hip_runtime_api.h
include/hip/clang_detail/: hip_runtime.h
include/hip2/: hip_runtime.h
lib/src/: hipLaunchByPtr.cpp  hipLaunchByPtr.h  prepare-builtins.cpp
libdevice/: CMakeLists.txt
libdevice/src/: atomics.cpp  ballot.ll  hip_devrt_printf_alloc.cl  hipdrt_printf_alloc.cpp  lanemask.ll  libicuda2gcn.ll  nsync.ll  trap.ll  x_atomics.cl
test/hip/atomics/: test_atomics.cpp
